add visits add and get and its tests (#13)
* add visits add and get and its tests

* add validation of the scan code received

* add _exit test

* empty commit

* update swagger

* separate logic into service

* applied nachos suggestions
